--- a/IndusNews_PortalApp/Views/Shared/_LayoutMain.cshtml
+++ b/IndusNews_PortalApp/Views/Shared/_LayoutMain.cshtml
@@ -28,7 +28,7 @@
     <link href="~/Content/CustomCSS/magnific-popup.css" rel="stylesheet">
     <link href="~/Content/CustomCSS/styles.css" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".fixed-top">
+<body data-spy="scroll" data-target=".fixed-top" style="font-size:1.5em !important">
     <!-- Preloader -->
     @*<div class="spinner-wrapper">
             <div class="spinner">
@@ -39,7 +39,7 @@
         </div>*@
     <!-- end of preloader -->
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-custom fixed-top" style="background-color: #4633af !important">
+    <nav class="navbar navbar-expand-md navbar-custom fixed-top" style="background-color: #4633af; font-size:1em !important">
         <!-- Text Logo -->
         @Html.ActionLink("INDUS NEWS", "Homepage", "Home", null, new { @class = "navbar-brand logo-text page-scroll" })
         <!-- Image Logo -->
