--- a/IndusNews_PortalApp/Views/Home/Index.cshtml
+++ b/IndusNews_PortalApp/Views/Home/Index.cshtml
@@ -2,26 +2,28 @@
     ViewBag.Title = "Main Page";
 }
 
-<div class="jumbotron">
-    <h1>INDUS NEWS PORTAL</h1>
-    <p class="lead">An ultimate solution to manage records and important data for efficient management in organization.</p>
-    <p><a href="https://indus.news" target="_blank" class="btn btn-default btn-lg">Visit Indus News &raquo;</a></p>
+
+
+<div class="jumbotron" style="background-color:lightskyblue">
+        <h1>INDUS NEWS PORTAL</h1>
+        <p class="lead">An ultimate solution to manage records and important data for efficient management in organization.</p>
+        <p><a href="https://indus.news" target="_blank" class="btn btn-default btn-lg">Visit Indus News &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>HR Department</h2>
+    <div class="col-md-4" style="background-color:lemonchiffon">
+        <h2 class="glyphicon glyphicon-stats"> HR Department</h2>
         <p>From job seekers to emloyees, manage all human resources data</p>
-        <p>@Html.ActionLink("HR", "Dashboard", "HR", null, new { @class = "btn btn-primary" })</p>
+        <p>@Html.ActionLink("HR Log In", "Dashboard", "HR", null, new { @class = "btn btn-primary" })</p>
     </div>
-    <div class="col-md-4">
-        <h2>Accounts &amp; Finance</h2>
+    <div class="col-md-4" style="background-color:blanchedalmond">
+        <h2 class="glyphicon glyphicon-list"> Accounts</h2>
         <p>Manage payroll, budget and other accounts &amp; finance details efficiently</p>
-        <p>@Html.ActionLink("Accounts & Finance", "Dashboard", "AccountsFinance", null, new { @class = "btn btn-primary" })</p>
+        <p>@Html.ActionLink("Accounts Log In", "Dashboard", "AccountsFinance", null, new { @class = "btn btn-primary" })</p>
     </div>
-    <div class="col-md-4">
-        <h2>Employee</h2>
+    <div class="col-md-4" style="background-color:antiquewhite">
+        <h2 class="glyphicon glyphicon-user"> Employee</h2>
         <p>View profile, employment details, attendance and leave requests</p>
-        <p>@Html.ActionLink("Employee", "Dashboard", "EmpDashboard", null, new { @class = "btn btn-primary" })</p>
+        <p>@Html.ActionLink("Employee Log In", "Dashboard", "EmpDashboard", null, new { @class = "btn btn-primary" })</p>
     </div>
 </div>
