--- a/IndusNews_PortalApp/Views/Shared/_Layout.cshtml
+++ b/IndusNews_PortalApp/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - Portal - Indus News</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,6 +26,9 @@
                     <li>@Html.ActionLink("Employee", "Dashboard", "EmpDashboard")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="mailto: shoibkhan4646@gmail.com" class="glyphicon glyphicon-envelope">Contact</a></li>
+                </ul>
             </div>
         </div>
     </div>
