--- a/IndusNews_PortalApp/Views/HR/Dashboard.cshtml
+++ b/IndusNews_PortalApp/Views/HR/Dashboard.cshtml
@@ -23,12 +23,12 @@
     </div>
     <div class="col-md-3" style="background-color:aquamarine">
         <h2>Attendance</h2>
-        <p>Manage attendance record to keep employee payroll accurate</p>
+        <p>Manage attendance record </p>
         <p>@Html.ActionLink("Attendance", "Index", "Attendances", null, new { @class = "btn btn-primary" })</p>
     </div>
     <div class="col-md-3" style="background-color:darksalmon">
         <h2>Employees</h2>
-        <p>Register employee and manage employees data</p>
+        <p>Register and manage employees' data</p>
         <p>@Html.ActionLink("Employee", "Index", "Employees", null, new { @class = "btn btn-primary" })</p>
     </div>
     <div class="col-md-3" style="background-color:gainsboro">
