--- a/IndusNews_PortalApp/Views/LeaveApplications/Index.cshtml
+++ b/IndusNews_PortalApp/Views/LeaveApplications/Index.cshtml
@@ -45,8 +45,9 @@
             @Html.DisplayFor(modelItem => item.Employee.EmpName)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id=item.ApplicationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ApplicationId })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ApplicationId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ApplicationId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ApplicationId })
         </td>
     </tr>
 }
